--- a/src/app/theme/pages/default/facturaciones/facturaciones-datatable/facturaciones-datatable.component.html
+++ b/src/app/theme/pages/default/facturaciones/facturaciones-datatable/facturaciones-datatable.component.html
@@ -1,4 +1,4 @@
-<table class="table table-bordered table-responsive">
+<table class="table table-bordered table-responsive m-table m-table--head-bg-brand">
     <thead>
     <tr>
         <th>Fecha</th>
