--- a/src/app/theme/pages/default/perfil/perfil-lista/perfil-lista.component.html
+++ b/src/app/theme/pages/default/perfil/perfil-lista/perfil-lista.component.html
@@ -54,12 +54,12 @@
           <div class="row">
             <div class="col-md-3 col-lg-3 col-sm-12">
               <img
-                *ngIf="usuario.avatar"
+                *ngIf="usuario.avatar && usuario.avatar.web_url"
                 [src]="usuario.avatar.web_url"
                 style="width: 150px; height: 150px; object-fit: contain"
               />
               <img
-                *ngIf="!usuario.avatar"
+                *ngIf="usuario.avatar && !usuario.avatar.web_url"
                 [src]="defaultAvatar"
                 style="width: 150px; height: 150px; object-fit: contain"
               />
