--- a/src/app/theme/pages/default/tracks/tracks-list/tracks-list.component.html
+++ b/src/app/theme/pages/default/tracks/tracks-list/tracks-list.component.html
@@ -1,12 +1,14 @@
 <div class="m-subheader">
     <div class="d-flex align-items-center">
         <div class="mr-auto">
-            <h3 class="m-subheader__title">
-                {{appService.title}}
+            <h3 class="page-title">
+                Informar Compra
             </h3>
         </div>
     </div>
 </div>
+<hr>
+
 <div class="m-content">
     <div class="m-portlet m-portlet--mobile">
         <div class="m-portlet__body">
