Cambios de estilo

--- a/src/app/auth/login/login.component-1.html
+++ b/src/app/auth/login/login.component-1.html
@@ -1,14 +1,13 @@
 <div class="m-grid__item m-grid__item--fluid m-grid m-grid--ver-desktop m-grid--desktop m-grid--tablet-and-mobile
- m-grid--hor-tablet-and-mobile m-login m-login--1 m-login--singin" id="m_login" style="background-color: #666">
+ m-grid--hor-tablet-and-mobile m-login m-login--1 m-login--singin" id="m_login" style="background-color: #1e1111">
 	<div class="m-grid__item m-grid__item--order-tablet-and-mobile-2 m-login__aside">
 		<div class="m-stack m-stack--hor m-stack--desktop">
 			<div class="m-stack__item m-stack__item--fluid">
 				<div class="m-login__wrapper">
 					<div class="m-login__logo">
 						<a href="#">
-							<!--<img src="./assets/img/logo/klogin.png">-->
+							<img src="./assets/img/logo/logo_login.png">
 						</a>
-						<h1 style="color: #eee">BOX593</h1>
 					</div>
 					<div class="m-stack__item m-stack__item--center">
 						<div class="m-login__account">
