--- a/src/app/page-loader/page-loader.component.html
+++ b/src/app/page-loader/page-loader.component.html
@@ -15,7 +15,7 @@
         .container1 > div, .container2 > div, .container3 > div {
             width: 30px;
             height: 30px;
-            background-color: #98c93b;
+            background-color: #b5b6b5;
 
             border-radius: 100%;
             position: absolute;
