--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,7 +32,7 @@ body {
   margin: 0 0 10px 0;
 }
 .profile-info li:hover i {
-  color: #169ef4;
+  color: #b5b6b5;
 }
 
 .info-list {
@@ -63,7 +63,7 @@ body {
   width: 80px;
   height: 80px;
   object-fit: contain;
-  background-color: #00c5dc;
+  background-color: #ecede8;
 }
 .image-shown {
   width: 300px;
@@ -93,7 +93,7 @@ body {
 }
 .notas {
   font-size: 20px;
-  background-color: #34bfa3;
+  background-color: #ecede8;
   color: white;
   margin-bottom: 0px;
 }
