--- a/src/app/auth/login/login.component-2.html
+++ b/src/app/auth/login/login.component-2.html
@@ -47,7 +47,7 @@
 					</div>
 					<div class="m-login__form-action">
 						<button [disabled]="loading" [ngClass]="{'m-loader m-loader--right m-loader--light': loading}" id="m_login_signin_submit" class="btn btn-focus m-btn m-btn--pill m-btn--custom">
-							Sign In
+							Ingresa
 						</button>
 					</div>
 				</form>
