--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,7 +19,7 @@ body {
   font-size: 30px;
   letter-spacing: -1px;
   display: block;
-  color: #666;
+  color: #b5b6b5;
   margin: 0px 0px 15px 0px;
   font-weight: 300;
   font-family: "Open Sans", sans-serif;
