--- a/src/app/theme/layouts/header-nav/header-nav.component.html
+++ b/src/app/theme/layouts/header-nav/header-nav.component.html
@@ -330,7 +330,7 @@
                                                     </li>
                                                     <li class="m-nav__separator m-nav__separator--fit"></li>
                                                     <li class="m-nav__item">
-                                                        <a class="btn m-btn--pill btn-secondary m-btn m-btn--custom m-btn--label-brand m-btn--bolder"
+                                                        <a class="btn m-btn--pill btn-success m-btn m-btn--custom m-btn--label-brand m-btn--bolder logout"
                                                            routerLink="/logout">
                                                             Logout
                                                         </a>
