--- a/src/assets/demo/default/base/style.bundle.css
+++ b/src/assets/demo/default/base/style.bundle.css
@@ -1443,13 +1443,13 @@ fieldset[disabled] a.btn {
     border-color: #2e40d4; }
 
 .btn-secondary {
-  color: #111;
-  background-color: #ebedf2;
-  border-color: #ebedf2; }
+  color: #1e1111;
+  background-color: #f8f9fc;
+  border-color: #f8f9fc; }
   .btn-secondary:hover {
     color: #fdfeff;
-    background-color: #d4d8e3;
-    border-color: #ccd1de; }
+    background-color: #b5b6b5;
+    border-color: #b5b6b5; }
   .btn-secondary:focus, .btn-secondary.focus {
     box-shadow: 0 0 0 3px rgba(235, 237, 242, 0.5); }
   .btn-secondary.disabled, .btn-secondary:disabled {
@@ -11720,18 +11720,22 @@ code {
     box-shadow: 0px 5px 10px 2px rgba(244, 81, 108, 0.26); }
 
 .btn.btn-default, .btn.btn-secondary {
-  background: #b5b6b5;
-  border-color: #b5b6b5; }
+  background: #fdfeff ;
+  border-color: #fdfeff; }
   .btn.btn-default i, .btn.btn-secondary i {
     color: #6f727d; }
   .btn.btn-default:hover, .btn.btn-default.active, .btn.btn-default:active, .btn.btn-default:focus,
   .show > .btn.btn-default.dropdown-toggle, .btn.btn-secondary:hover, .btn.btn-secondary.active, .btn.btn-secondary:active, .btn.btn-secondary:focus,
   .show > .btn.btn-secondary.dropdown-toggle {
-    border-color: #ecede8;
-    background-color: #ecede8; }
+    border-color: #b5b6b5;
+    background-color: #b5b6b5; }
   .btn.btn-default.disabled, .btn.btn-default:disabled, .btn.btn-secondary.disabled, .btn.btn-secondary:disabled {
     border-color: #f4f5f8; }
 
+  .logout:hover{ background: #ecede8 ;
+    border-color: #ecede8;
+    color:#1e1111;
+   }
 .btn.m-btn--air.btn-default, .btn.m-btn--air.btn-secondary {
   -webkit-box-shadow: 0px 3px 20px 0px rgba(113, 106, 202, 0.17);
   -moz-box-shadow: 0px 3px 20px 0px rgba(113, 106, 202, 0.17);
