cambios de estilo

--- a/src/app/theme/layouts/header-nav/header-nav.component.html
+++ b/src/app/theme/layouts/header-nav/header-nav.component.html
@@ -3,7 +3,7 @@
     <div class="m-container m-container--fluid m-container--full-height">
         <div class="m-stack m-stack--ver m-stack--desktop">
             <!-- BEGIN: Brand -->
-            <div class="m-stack__item m-brand  m-brand--skin-dark" style="background-color: rgba(38, 38, 38, 1); width: 180px;">
+            <div class="m-stack__item m-brand  m-brand--skin-dark" style="background-color: rgba(38, 38, 38, 1);">
                 <div class="m-stack m-stack--ver m-stack--general">
                     <div class="m-stack__item m-stack__item--middle m-brand__logo">
                         <a routerLink="/mi-casillero" class="m-brand__logo-wrapper">
