Cambios en loguin

--- a/src/app/auth/registro-usuario/registro-usuario.component.html
+++ b/src/app/auth/registro-usuario/registro-usuario.component.html
@@ -37,7 +37,7 @@
                 </section>
             </div>
             <label class="col-lg-2 col-form-label">
-                Identificación:
+                Cédula:
             </label>
             <div class="col-lg-3">
                 <input type="text" class="form-control m-input" placeholder="ID"
@@ -125,7 +125,7 @@
                 </select>
             </div>
             <label class="col-lg-2 col-form-label" *ngIf="tipo_registro == 1">
-                Provincia/Departamento
+                Provincia
             </label>
             <div class="col-lg-3" *ngIf="tipo_registro == 1">
                 <div class="m-loader m-loader--primary m-loader--right" *ngIf="!provincias">
