--- a/src/app/auth/login/login.component-2.html
+++ b/src/app/auth/login/login.component-2.html
@@ -51,6 +51,13 @@
 						</button>
 					</div>
 				</form>
+				<div class="m-stack__item m-stack__item--center">
+					<div class="m-login__account">
+						<span class="m-login__account-msg">
+							Powered by Aerodestino LLC
+						</span>
+					</div>
+				</div>
 			</div>
 			<div class="m-login__forget-password">
 				<div class="m-login__head">
