--- a/src/app/theme/layouts/header-nav/header-nav.component.html
+++ b/src/app/theme/layouts/header-nav/header-nav.component.html
@@ -78,7 +78,7 @@
                                 <span class="m-menu__link-title">
                                     <span class="m-menu__link-wrap">
                                         <span class="m-menu__link-text">
-                                            Mis Facturaciones
+                                            Mis Facturas
                                         </span>
                                     </span>
                                 </span>
