--- a/src/app/theme/pages/default/mi-casillero/mi-casillero-lista/mi-casillero-lista.component.html
+++ b/src/app/theme/pages/default/mi-casillero/mi-casillero-lista/mi-casillero-lista.component.html
@@ -34,7 +34,7 @@
                         <strong>Casillero Internacional: </strong>
                     </span><br>
                     <span style="font-size: 14px">
-                         {{appService.user.nombre}} {{appService.user.apellido}} / Enkarga
+                         {{appService.user.nombre}} {{appService.user.apellido}} / Box593
                     </span><br>
                     <span style="font-size: 14px">
                          {{appService.user.pais.direccion}} #{{appService.user.codigo}}
