--- a/src/app/auth/login/login.component-2.html
+++ b/src/app/auth/login/login.component-2.html
@@ -8,20 +8,20 @@
 			</div>
 			<div class="m-stack__item m-stack__item--center">
 				<div class="m-login__account">
-							<span class="m-login__account-msg">
+							<h3 class="m-login__account-msg">
 								¿Aún no tienes una cuenta?
-							</span>
+							
 					&nbsp;&nbsp;
 					<a routerLink="/signup" class="m-link m-login__account-link">
 						Regístrate
-					</a>
+					</a></h3>
 				</div>
 			</div>
 			<div class="m-login__signin">
 				<div class="m-login__head">
-					<h3 class="m-login__title">
+					<span class="m-login__title">
 						Introduzca usuario y contraseña
-					</h3>
+					</span>
 				</div>
 				<form (ngSubmit)="f.form.valid && signin()" #f="ngForm" class="m-login__form m-form" action="">
 					<ng-template #alertSignin></ng-template>
