--- a/src/app/auth/login/login.component-2.html
+++ b/src/app/auth/login/login.component-2.html
@@ -8,20 +8,20 @@
 			</div>
 			<div class="m-stack__item m-stack__item--center">
 				<div class="m-login__account">
-							<h3 class="m-login__account-msg">
+							<span class="m-login__account-msg" style="font-size: 1.5em;">
 								¿Aún no tienes una cuenta?
-							
+							</span>
 					&nbsp;&nbsp;
-					<a routerLink="/signup" class="m-link m-login__account-link">
+					<a routerLink="/signup" class="m-link m-login__account-link" style="font-size: 1.5em;">
 						Regístrate
-					</a></h3>
+					</a>
 				</div>
 			</div>
 			<div class="m-login__signin">
 				<div class="m-login__head">
-					<span class="m-login__title">
+					<h4 class="m-login__title">
 						Introduzca usuario y contraseña
-					</span>
+					</h4>
 				</div>
 				<form (ngSubmit)="f.form.valid && signin()" #f="ngForm" class="m-login__form m-form" action="">
 					<ng-template #alertSignin></ng-template>
